Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <!--<img src="http://localhost:3000/imagen/usuarios/5bf48c1c48f930138f693a8c-306.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YmY0OGMxYzQ4ZjkzMDEzOGY2OTNhOGMiLCJub21icmUiOiJKdWxpbyIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTQzMjc0MzM2LCJleHAiOjE1NDM0NDcxMzZ9.FRmtYIWR6fanmYeyHLKKYaxhhfyXwtZYYUteR6HCbfs"
+        alt="Imagen de usuario">-->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <script>
